# Criterion

./: .bumpversion.cfg  .cirrus.yml  .dist-filter.sh  .gitignore  .gitmodules  .travis.yml  .uncrustify.cfg  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  README.rst  appveyor.yml  autogen.sh  configure.ac  debian.copyright  description.txt  index.html  meson.build  meson_options.txt  params.json
dev/autotools/: Makefile.am  README.md  autogen.sh  configure.ac  simple.c
dev/cmake/: CMakeLists.txt  README.md
dev/cmake/cmake/: FindCriterion.cmake
dev/cmake/include/: foo.h
dev/cmake/src/: CMakeLists.txt  foo.c
dev/cmake/test/: CMakeLists.txt  test.c
include/: assert.h  common.h  criterion.h  hooks.h  meson.build
include/criterion/: abort.h  alloc.h  asprintf-compat.h  assert.h  assert_base.h  common.h  criterion.h  designated-initializer-compat.h  embedded.h  event.h  float.h  hooks.h  logging.h  options.h  ordered-set.h  output.h  parameterized.h  preprocess.h  redirect.h  stats.h  theories.h  types.h
include/criterion/internal/: asprintf-compat.h  assert.h  capabilities.h  common.h  deprecation.h  designated-initializer-compat.h  hooks.h  new_asserts.h  ordered-set.h  parameterized.h  preprocess.h  redirect.h  stdio_filebuf.hxx  stream.hxx  test.h  theories.h
include/criterion/new/: assert.h  memory.h  stream.h
po/: LINGUAS  Makevars  POTFILES.in  de.po  fr.po  meson.build
samples/: CMakeLists.txt  Makefile.am  asserts.c  asserts.c.bin.err.expected  asserts.cc  asserts.cc.bin.err.expected  asserts.err.expected  description.c  description.cc  description.cc.bin.err.expected  description.err.expected  fixtures.c  fixtures.c.bin.out.expected  fixtures.cc  log.c  log.cc  long-messages.c  long-messages.err.expected  meson.build  more-suites.c  more-suites.cc  other-crashes.c  parameterized.c  parameterized.cc  redirect.c  redirect.cc  report.c  report.cc  report.cc.bin.err.expected  report.err.expected  report.out.expected  signal.c  signal.c.bin.err.expected  signal.cc  signal.err.expected  simple.c  simple.c.bin.err.expected  simple.cc.bin.err.expected  simple.err.expected  skip.c  (+6 more)
samples/outputs/: asserts.c.bin.err.expected  asserts.cc.bin.err.expected  description.c.bin.err.expected  description.cc.bin.err.expected  fixtures.cc.bin.err.expected  more-suites.c.bin.err.expected  other-crashes.c.bin.err.expected  parameterized.c.bin.err.expected  report.c.bin.err.expected  report.cc.bin.err.expected  report.cc.bin.out.expected  signal.c.bin.err.expected  signal.cc.bin.err.expected  simple.c.bin.err.expected  simple.cc.bin.err.expected  theories.c.bin.err.expected  theories.cc.bin.err.expected
samples/tests/: CMakeLists.txt  early_exit.sh  exception.cc  exit.cc  fail_fast.sh  failmessages.c  failmessages.cc  help.sh  json_test.sh  list.sh  other-crashes.c  other-crashes.cc  pattern.sh  run_test.sh  tap_test.sh  theories_regression.c  theories_regression.cc  unwind.cc  verbose.sh  with-time.c  xml_test.sh
samples/tests/outputs/: exit.cc.bin.err.expected  failmessages.c.bin.err.expected  failmessages.cc.bin.err.expected  json_test.sh.err.expected  long-messages.c.bin.err.expected  long-messages.cc.bin.err.expected  tap_test.sh.err.expected  theories_regression.c.bin.err.expected  theories_regression.cc.bin.err.expected  xml_test.sh.err.expected
src/: CMakeLists.txt  abort.c  abort.h  asprintf.c  atomic.h  common.h  config.h.in  criterion.pc.in  entry.c  err.c  err.h  event.c  event.h  extmatch.c  extmatch.h  file.c  i18n.c  i18n.h  logging.c  main.c  meson.build  mutex.c  mutex.h  options.c  ordered-set.c  posix-compat.c  posix-compat.h  process.c  process.h  report.c  report.h  runner.c  runner.h  sorted-list.c  stats.c  stats.h  theories.c  timer.c  timer.h  worker.c
src/capi/: specifiers.c  stream.c
src/compat/: alloc.c  alloc.h  basename.c  basename.h  internal.h  kill.c  kill.h  mockfile.c  off_t.h  path.c  path.h  pipe-internal.h  pipe.c  pipe.h  posix.h  process.c  process.h  processor.c  processor.h  section-elf.c  section-mach-o.c  section-pe.c  section.c  section.h  setjmp.h  strtok.c  strtok.h  time.c  time.h  unwind.c  unwind.h
src/core/: abort.c  abort.h  assert.c  client.c  client.h  coroutine.h  ordered-set.c  report.c  report.h  runner.c  runner.h  runner_coroutine.c  runner_coroutine.h  stats.c  stats.h  test.c  theories.c  worker.c  worker.h
src/core/wrappers/: wrap.c  wrap.cc  wrap.h  wrap.m  wrappers.c
src/csptr/: array.c  array.h  common.h  config.h  csptr.h  mman.c  mman.h  smalloc.h  smart_ptr.h
src/entry/: entry.c  main.c  options.c  params.c
src/float/: ieee754.c
src/i18n/: i18n.h
src/io/: asprintf.c  asprintf.h  event.c  event.h  file.c  json.c  output.c  output.h  redirect.c  tap.c  xml.c
src/log/: logging.c  logging.h  normal.c  output.c  output.h  tap.c  xml.c
src/protocol/: Makefile  connect.c  connect.h  criterion.options  criterion.pb.c  criterion.pb.h  criterion.proto  gen-pb.py  messages.c  messages.h  protoc-gen-nanopb  protocol.c  protocol.h
src/signals/: create_source.sh  signal_names.h  signal_names_default.c
src/string/: brz.c  brz.h  diff-stubs.c  diff.c  diff.h  extglobmatch.c  extglobmatch.h  extmatch.c  extmatch.h  fmt.c  fmt.h  i18n.c  i18n.h  xxd.c  xxd.h
test/: CMakeLists.txt  alloc.cc  asprintf.c  asserts.t  core.t  crashes.t  float.cc  meson.build  ordered-set.c  path.c  redirect.cc  suites.t  theories.t  xml.t
test/cram/: asserts.t  bugs.t  core.t  crashes.t  early-exit.t  exit.t  fail-fast.t  help.t  json.t  log.t  meson.build  parameterized.t  pattern.t  redirect.t  skip.t  suites.t  tap.t  theories.t  xml.t
test/exactly/: README.rst  c.suite  common.xly  cxx.suite  meson.build
test/exactly/core/: exactly.suite
test/exactly/exit/: common.xly
test/exactly/help/: common.xly
test/exactly/log/: c.suite
test/exactly/redirect/: c.case  (+4 more)
test/full/: bug463.c  bug521.c  exception.cc  exit.cc  failmessages.c  failmessages.cc  meson.build  theories_regression.cc
test/unit/: asprintf.c  escape.c  meson.build  ordered-set.c  path.c
(+301 files in other folders)
